--- a/k8s/dev/configmap.yaml
+++ b/k8s/dev/configmap.yaml
@@ -12,6 +12,6 @@ data:
   POC_ACTIVE_USR: 'admin'
   POC_ACTIVE_QUEUE: 'poc.audit.queue'
   POC_ACTIVE_PSS: 'adminsophos.2019'
-  POC_ACTIVE_ENDPOINT: 'tcp://PENDIENTEDESPLIEGUEACTIVEMQ:6616'
+  POC_ACTIVE_ENDPOINT: 'ssl://b-d29d0c02-d319-46c4-b11d-c298669f7aca-1.mq.us-east-2.amazonaws.com:61617'
   POC_SERVICE_AUDIT_VALIDATE: 'http://wsrestauditoriaapi:18082/api/actividad/add'
-  POC_SERVICE_SECURITY_VALIDATE: 'http://wsrestsecurity:8080/services/security/verifyJwtToken/'
+  POC_SERVICE_SECURITY_VALIDATE: 'http://ec2-3-17-205-42.us-east-2.compute.amazonaws.com:3000/services/security/verifyJwtToken/'
