Se actualiza confirguracion de redis para utilizar variables de entorno AB#1276 AB#1277

--- a/k8s/dev/configmap.yaml
+++ b/k8s/dev/configmap.yaml
@@ -6,8 +6,9 @@ metadata:
 data:
   POC_REDIS_HOST: 'redis-master'
   POC_REDIS_PORT: '6379'
+  POC_REDIS_PASS: 'Qr7XDpcMWp'
   POC_CASSANDRA_KEYSPACE: 'sophospoc'
-  POC_CASSANDRA_HOST: 'http://cassandra-'
+  POC_CASSANDRA_HOST: 'cassandra'
   POC_CASSANDRA_PORT: '9042'
   POC_ACTIVE_USR: 'admin'
   POC_ACTIVE_QUEUE: 'poc.audit.queue'
