Se agrega manejo de url de EUREKA con variables de entorno

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://SBBOGLAPPROJO7.sophos.col.com:8761/eureka}
+      defaultZone: ${POC_EUREKA_URI}
   instance:
     preferIpAddress: true
     status-page-url-path: /v2/api-docs/
