Se agregan cabeceras content type al servicio de verificacion de token y se incluye manejo de seguridad

--- a/k8s/dev/service.yaml
+++ b/k8s/dev/service.yaml
@@ -2,13 +2,20 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wsrestgestioncarrito
+  annotations: 
+    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
+    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:887482798966:certificate/541a4741-02a6-450b-8514-a6fd11bff86b
+    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
   namespace: dev
 spec:
   ports:
-    - name: http
-      port: 18080
-    - name: https
-      port: 443
+    - port: 18080
+      name: http
+      targetPort: 18080
+    - port: 443
+      name: https
+      targetPort: 18080
   type: LoadBalancer    
   selector:
     app: wsrestgestioncarrito
