--- a/k8s/dev/service.yaml
+++ b/k8s/dev/service.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations: 
     service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:887482798966:certificate/541a4741-02a6-450b-8514-a6fd11bff86b
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:887482798966:certificate/e1d649ba-6e3a-496d-a3d4-f38a0672f75c
     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
   namespace: dev
 spec:
@@ -13,9 +13,11 @@ spec:
     - port: 18080
       name: http
       targetPort: 18080
+      protocol: TCP
     - port: 443
       name: https
       targetPort: 18080
+      protocol: TCP
   type: LoadBalancer    
   selector:
     app: wsrestgestioncarrito
