--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,13 @@
 			<type>jar</type>
 		</dependency>
 		
+		<!-- 
+		DESCUBIRMIENTO EUREKA
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 			<version>2.0.2.RELEASE</version>
-		</dependency>
+		</dependency> -->
 
 	</dependencies>
 
